# safha

./: .gitignore  README.md  demo.tape  pyproject.toml
docs/: index.html  kindle.html
safha/: __init__.py  __main__.py  cleaner.py  cli.py  display.py  exporter.py  scraper.py
